--- a/TestEpplus/TestEpplus.csproj
+++ b/TestEpplus/TestEpplus.csproj
@@ -109,17 +109,17 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
-    <Reference Include="Spire.License, Version=1.3.8.320, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
+    <Reference Include="Spire.License, Version=1.3.8.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\01. dll\xls.11.1.0\xls.11.1.0\net20\Spire.License.dll</HintPath>
+      <HintPath>dll\Spire.License.dll</HintPath>
     </Reference>
     <Reference Include="Spire.Pdf, Version=7.1.10.0, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\01. dll\xls.11.1.0\xls.11.1.0\net20\Spire.Pdf.dll</HintPath>
+      <HintPath>dll\Spire.Pdf.dll</HintPath>
     </Reference>
     <Reference Include="Spire.XLS, Version=11.1.4.0, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\01. dll\xls.11.1.0\xls.11.1.0\net20\Spire.XLS.dll</HintPath>
+      <HintPath>dll\Spire.XLS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -196,6 +196,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dll\Spire.License.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\Spire.Pdf.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dll\Spire.XLS.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
